Fix position of YouTube element to fixed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
       #youtube {
+        position: fixed;
         bottom: 0px;
         left: 600px;
       }
