--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         width: 100px;
       }
     </style>
-    <title>My Website</title>
+    <title>My Sigma Website</title>
   </head>
   <body>
     <main>
