--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       button {
         color: white;
         background-color: blue;
-        corner-radius: 10px;
+        border-radius: 10px;
         height: 50px;
         width: 100px;
       }
