--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
+      body {
+        font-family: "Segoe UI", sans-serif;
+        font-size: 1.5em;
+      }
+      
       button {
         color: white;
         background-color: blue;
